testdata/baselines/reference/submodule/compiler/withStatementErrors.errors.txt
error TS-1: Pre-emit (2) and post-emit (4) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
withStatementErrors.ts(3,1): error TS1101: 'with' statements are not allowed in strict mode.
withStatementErrors.ts(3,1): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


!!! error TS-1: Pre-emit (2) and post-emit (4) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 withStatementErrors.ts:4:5: Cannot find name 'bing'.
!!! related TS2304 withStatementErrors.ts:5:5: Cannot find name 'bang'.
==== withStatementErrors.ts (2 errors) ====
    declare var ooo:any;
    
    with (ooo.eee.oo.ah_ah.ting.tang.walla.walla) { // error
    ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
        bing = true; // no error
        bang = true; // no error
        
        function bar() {} // no error
    
        bar(); // no error
    
        class C {} // error   
        
        interface I {} // error
        
        namespace M {} // error
            
    }
    